--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,29 +2,41 @@ version: '3.8'
 
 services:
   php:
-    image: php:7.4-fpm
-    container_name: php-container
+    build:
+      context: .
+      dockerfile: docker/php/Dockerfile
     volumes:
-      - sqlite_data:/var/www/data         # Mount the SQLite database folder
-      - ./php:/var/www/html               # Mount the PHP files (like index.php and backup.php)
-      - ./backups:/var/www/backup         # Mount the backup folder (local storage for backups)
-    networks:
-      - backend
+      - ./php:/var/www/html
+      - ./data:/var/www/html/data
+    restart: always
+    healthcheck:
+      test: ["CMD", "php", "-r", "echo 'Health OK';"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   nginx:
-    image: nginx:latest
-    container_name: nginx-container
+    image: nginx:alpine
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf  # Custom Nginx configuration
-      - sqlite_data:/var/www/data           # Mount the SQLite database folder
-      - ./php:/var/www/html                 # Mount the PHP files
+      - ./php:/var/www/html
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     ports:
-      - "8080:80"                           # Map port 8080 to container port 80 (HTTP)
-    networks:
-      - backend
+      - "8080:80"
+    depends_on:
+      php:
+        condition: service_healthy
+    restart: always
 
-networks:
-  backend:
-
-volumes:
-  sqlite_data:  # This volume stores the SQLite database (data persistence)
+  backup:
+    image: alpine
+    volumes:
+      - ./data:/data
+      - ./backup:/backup
+    entrypoint: ["/bin/sh", "-c"]
+    command: >
+      "while true; do
+         mkdir -p /backup/$(date +%Y-%m-%d) &&
+         tar czf /backup/$(date +%Y-%m-%d)/sqlite-backup.tar.gz /data &&
+         sleep 86400;
+       done"
+    restart: always
